--- a/css/main.css
+++ b/css/main.css
@@ -264,6 +264,90 @@ main {
   margin-bottom: 3rem;
 }
 
+.card {
+  border-radius: 0.5rem;
+  -webkit-box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.466);
+  -moz-box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.466);
+  box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.466);
+  background-color: rgba(255, 255, 255, 0.514);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  margin-bottom: 5rem;
+  overflow: hidden;
+}
+.card:last-child {
+  margin-bottom: 15rem;
+}
+@media (min-width: 900px) {
+  .card:last-child {
+    margin-bottom: 5rem;
+  }
+}
+@media (min-width: 1200px) {
+  .card {
+    max-width: 60vw;
+  }
+}
+.card .card-title {
+  padding: 1rem;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.575);
+}
+.card .card-title svg,
+.card .card-title img {
+  width: 100px;
+  height: 100px;
+}
+.card .card-title h4 {
+  margin: 0;
+  padding: 1rem;
+  text-align: center;
+  font-size: 2rem;
+}
+.card .card-title .card-title__company {
+  display: flex;
+  align-items: center;
+}
+.card .card-title .card-title__company h4 {
+  padding: 0 2rem;
+}
+.card .card-title .card-title__work {
+  font-size: 1.3rem;
+  padding: 2rem 0 0 1rem;
+  width: 100%;
+}
+@media (min-width: 900px) {
+  .card .card-title .card-title__work {
+    padding: 0 2rem 0 0;
+    width: 50%;
+    text-align: right;
+  }
+}
+.card .card-content {
+  padding: 0.5rem;
+}
+@media (min-width: 600px) {
+  .card .card-content {
+    padding: 2.5rem;
+  }
+}
+@media (min-width: 1200px) {
+  .card .card-content {
+    padding: 3rem;
+  }
+}
+.card .card-footer {
+  background-color: rgba(0, 0, 0, 0.048);
+  padding: 1.5rem;
+  width: 100%;
+}
+
 .card-skill {
   border-radius: 0.5rem;
   -webkit-box-shadow: -1px 1px 10px 1px rgba(0, 0, 0, 0.466);
