--- a/scss/main.scss
+++ b/scss/main.scss
@@ -305,6 +305,84 @@ main {
 		margin-bottom: 3rem;
 	}
 }
+.card {
+	border-radius: 0.5rem;
+	@include box-shadow(-1px, 1px, 10px, 1px, rgba(0, 0, 0, 0.466));
+	background-color: rgba(255, 255, 255, 0.514);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: auto;
+	margin-bottom: 5rem;
+	overflow: hidden;
+
+	&:last-child {
+		margin-bottom: 15rem;
+	}
+	@include tablet-up() {
+		&:last-child {
+			margin-bottom: 5rem;
+		}
+	}
+
+	@include desktop() {
+		max-width: 60vw;
+	}
+
+	.card-title {
+		padding: 1rem;
+		width: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: center;
+		border-bottom: 2px solid rgba(0, 0, 0, 0.575);
+
+		svg,
+		img {
+			width: 100px;
+			height: 100px;
+		}
+		h4 {
+			margin: 0;
+			padding: 1rem;
+			text-align: center;
+			font-size: 2rem;
+		}
+
+		.card-title__company {
+			display: flex;
+			align-items: center;
+			h4 {
+				padding: 0 2rem;
+			}
+		}
+		.card-title__work {
+			font-size: 1.3rem;
+			padding: 2rem 0 0 1rem;
+			width: 100%;
+			@include tablet-up() {
+				padding: 0 2rem 0 0;
+				width: 50%;
+				text-align: right;
+			}
+		}
+	}
+	.card-content {
+		padding: 0.5rem;
+		@include tablet() {
+			padding: 2.5rem;
+		}
+		@include desktop {
+			padding: 3rem;
+		}
+	}
+	.card-footer {
+		background-color: rgba(0, 0, 0, 0.048);
+		padding: 1.5rem;
+		width: 100%;
+	}
+}
 
 .card-skill {
 	border-radius: 0.5rem;
