--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@ main {
 .content article h2 {
   margin-bottom: 2rem;
   padding: 0;
-  font-size: 4rem;
+  font-size: 3rem;
   font-family: "Josefin Sans", sans-serif;
 }
 @media (min-width: 600px) {
@@ -356,6 +356,9 @@ main {
 .card .card-content h5 {
   font-size: 1.4rem;
 }
+.card .card-content a {
+  color: #ff00b3;
+}
 .card .card-footer {
   background-color: rgba(0, 0, 0, 0.048);
   padding: 1.5rem;
@@ -421,28 +424,48 @@ main {
   justify-content: space-between;
 }
 
+article.box-project {
+  padding: 0;
+}
+
 .box-project {
+  margin-top: 5rem;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
 }
-@media (min-width: 1200px) {
+@media (min-width: 900px) {
   .box-project {
+    align-items: unset;
     flex-wrap: nowrap;
   }
 }
 .box-project .content--image {
-  border-radius: 100px;
-  padding: 1rem;
-  height: 500px;
+  padding: 3rem;
+  height: 100%;
+}
+@media (min-width: 900px) {
+  .box-project .content--image {
+    align-items: unset;
+    width: 50%;
+  }
 }
 .box-project .content--image img {
   border-radius: 15px;
-  height: 100%;
+  height: auto;
+  max-width: 100%;
 }
 .box-project .box-project__content {
-  padding: 1.2rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+@media (min-width: 900px) {
+  .box-project .box-project__content {
+    align-items: unset;
+    margin-top: 3rem;
+    width: 50%;
+  }
 }
 .box-project .box-project__content h3 {
   font-size: 3rem;
@@ -452,6 +475,9 @@ main {
   font-style: italic;
   color: rgba(255, 255, 255, 0.788);
   font-size: 1.5rem;
+}
+.box-project .box-project__content p {
+  margin-bottom: 1rem;
 }
 .box-project .box-project__content .content--main {
   padding: 2rem 0;
@@ -464,6 +490,11 @@ main {
   font-size: 1.1rem;
   padding-top: 1rem;
 }
+#contact h2 {
+  margin-left: 0.3rem;
+  margin-bottom: 4rem;
+}
+
 .box-contact {
   display: flex;
   justify-content: space-around;
@@ -525,6 +556,7 @@ main {
   margin: 0.5rem;
 }
 .box-contact .contact-links .btn--cv {
+  display: none;
   background-color: #ff0055;
 }
 .box-contact .contact-links .btn--cv:hover {
